# pythen-server-demo

./: .coverage  .dockerignore  .env.dev  .flaskenv  .gitignore  .pre-commit-config.yaml  .tool-versions  Dockerfile  README.md  RESTClient.http  docker-compose.yml  logging.yaml  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: pre-commit.yml
migrations/: alembic.ini
migrations/versions/: 2025220104632_init_migration.py  2025220104711_case_add_name_and_rename_active.py  202522411037_init_system_info_table.py  2025225145210_system_info_add_meta_data_field.py  202522792816_add_table_system_evaluations_results.py
scripts/git-hooks/: generate-requirements.sh
src/: __init__.py  constants.py  env_config.py  error_handlers.py  main.py
src/configs/: env_config.py
src/exceptions/: api_exceptions.py
src/models/: __init__.py  case.py
src/repositories/: case_repository.py  system_evaluation_result_repository.py  system_info_repository.py
src/routes/: case_route.py  health_route.py
src/routes/dto/: base.py  case_dto.py  health_dto.py  system_evaluation_result_dto.py  system_info_dto.py
src/routes/schemas/: case_schema.py  common.py  system_evaluation_result_schema.py  system_info_schema.py
src/services/: case_service.py  system_evaluation_result_service.py  system_info_service.py
src/utils/: common.py  init_logger.py  validator.py
tests/: fixtures.py  test__init__.py
tests/repositories/: test_system_evaluation_result_repository.py  test_system_info_repository.py
tests/routes/: test_health_route.py
tests/routes/schemas/: test_system_evaluation_result_schema.py  test_system_info_schema.py
tests/services/: test_case_service.py  test_system_evaluation_result_service.py  test_system_info_service.py
tests/utils/: test_validator.py
