[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-server-demo"
version = "0.1.0"
description = "My Flask Web Application"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "alembic==1.16.1",
    "asn1crypto==1.5.1",
    "build==1.2.2.post1",
    "cachetools==5.5.1",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.1",
    "colorlog>=6.9.0",
    "flask>=3.1.0",
    "flask-httpauth>=4.8.0",
    "flask-migrate>=4.1.0",
    "google-api-core==2.24.1",
    "google-auth==2.40.2",
    "google-cloud-secret-manager==2.23.3",
    "googleapis-common-protos==1.70.0",
    "grpc-google-iam-v1==0.14.0",
    "grpcio==1.71.0",
    "grpcio-status==1.71.0",
    "gunicorn==23.0.0",
    "idna==3.10",
    "iniconfig==2.1.0",
    "jinja2==3.1.5",
    "packaging==25.0",
    "pg8000==1.31.2",
    "pluggy==1.6.0",
    "proto-plus==1.26.0",
    "protobuf==5.29.4",
    "psycopg2-binary==2.9.10",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pyproject-hooks==1.2.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "pyyaml>=6.0.2",
    "requests==2.32.3",
    "rsa==4.9.1",
    "ruff==0.11.11",
    "scramp==1.4.5",
    "six==1.17.0",
    "sqlalchemy==2.0.41",
    "typing-extensions==4.13.2",
    "urllib3==2.4.0",
    "uuid-utils==0.10.0",
    "uuid-v7==1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "tests*"]

[dependency-groups]
dev = [
    "pytest-cov>=6.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
]

[project.scripts]
start = "src.main:main"

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "src",
]
testpaths = ["tests"]
